--- a/src/4-components/b1-buttons/b1-style.scss
+++ b/src/4-components/b1-buttons/b1-style.scss
@@ -255,4 +255,10 @@
 			margin-left: map-get($act-space, "desktop-1");
 		}
 	}
+	/* Back To Top */
+	&__back-to-top {
+		i {
+			margin-left: 0px;
+		}
+	}
 }
