--- a/.storybook/public/style/manager.css
+++ b/.storybook/public/style/manager.css
@@ -307,8 +307,9 @@ div.sto-1tz551k a#shortcuts {
 	display: flex;
 	flex-direction: row;
 	height: 38px;
-	padding-bottom: 5px;
-	padding-top: 5px;
+	line-height: 1em;
+	padding-bottom: 7px;
+	padding-top: 7px;
 	padding-left: 15px;
 	padding-right: 5px;
 }
