--- a/src/4-components/t2-tabs/t2-style.scss
+++ b/src/4-components/t2-tabs/t2-style.scss
@@ -11,6 +11,12 @@
 	flex-direction: row;
 	justify-content: flex-start;
 	width: 100%;
+	@include devices(tablet) {
+		overflow-x: scroll;
+	}
+	@include devices(mobile) {
+		overflow-x: scroll;
+	}
 	&__tab {
 		align-items: center;
 		box-shadow: inset 0 0 0 0 $act-colour__white, inset 0 0 0 0 $act-colour__white, inset 0 0 0 0 $act-colour__white, 0 2px 0 $act-colour__purple;
@@ -20,6 +26,7 @@
 		font-size: $act-font-size__desktop-h6;
 		justify-content: flex-start;
 		padding: map-get($act-space, "desktop-1") map-get($act-space, "desktop-2");
+		min-width: 140px;
 		width: fit-content;
 		&:hover {
 			color: $act-colour__purple;
@@ -33,15 +40,19 @@
 		}
 	}
 	&__content {
-		&__demo {
-			align-items: center;
-			background-color: $act-colour__light-grey;
-			display: flex;
-			font-size: $act-font-size__desktop-h6;
-			height: 400px;
-			justify-content: center;
-		}
+		align-items: center;
+		background-color: $act-colour__light-grey;
+		display: flex;
+		font-size: $act-font-size__desktop-h6;
+		justify-content: center;
+		padding: map-get($act-space, "desktop-2");
 		margin-top: 2px;
 		width: 100%;
+		&__open {
+			display: flex;
+		}
+		&__closed {
+			display: none;
+		}
 	}
 }
