storybook docs updates

--- a/src/4-components/w1-wayfinding/w11-masthead/w11-style.scss
+++ b/src/4-components/w1-wayfinding/w11-masthead/w11-style.scss
@@ -1,5 +1,5 @@
 .act-masthead {
-	background-color: $act-colour__violet;
+	background-color: $act-colour__middle-dark-grey;
 	color: $act-colour__white;
 	display: flex;
 	width: $act-page-full-width;
