--- a/src/_core/colour.scss
+++ b/src/_core/colour.scss
@@ -14,6 +14,7 @@ $act-colour__light-grey: #f6f6f6;
 $act-colour__light-purple: #f4f2fa;
 $act-colour__medium-purple: #9a78f2;
 $act-colour__middle-grey: #adadad;
+$act-colour__middle-dark-grey: #4b4b4b;
 $act-colour__misty-rose: #ffe9eb;
 $act-colour__old-lace: #fff6e9;
 $act-colour__purple: #472d8c;
