add progress component

--- a/src/_core/fonts.scss
+++ b/src/_core/fonts.scss
@@ -10,6 +10,8 @@
 @import url("/fonts/fontawesome/css/fontawesome.css");
 @import url("/fonts/fontawesome/css/solid.css");
 @import url("/fonts/fontawesome/css/brands.css");
+@import url("/fonts/fontawesome/css/regular.css");
+@import url("/fonts/fontawesome/css/light.css");
 
 /* Variables */
 $montserrat: "Montserrat", sans-serif;
